# MirrorTool

./: meson.build  meson_options.txt  pyproject.toml
lib/mirrortool/: const.py  installation.py  meson.build
lib/mirrortool/_lmirrordist/: main.py
lib/mirrortool/util/: bin_entry_point.py  meson.build
man/: lmirrordist.1
man/ru/: lmirrordist.1
src/: meson.build
